# malin-lang

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  testCode.ma
ci/: .gitlab-ci.yml  Dockerfile  build_push_ci_container.sh
ci/alpine/: Dockerfile
ci/debian/: Dockerfile
ci/ubuntu/: Dockerfile
cmake/versionFromGit/: VersionFromGit.cmake
example/: classConstruct.ma  classes.ma  expression.ma  simpleCalc.ma  simpleCode.ma  testCode.ma
example/experimental/: heap.ma
example/future-ideas/: addMemberFunction.ma  array.malin  classConstruct.ma  json.ma  mem.ma  simpleCode.ma  str.malin  string.ma  testCode.ma
example/future-ideas/experimental/: constructShortcut.ma  heap.ma
src/: File.hpp  Lexer.h  Log.h  SourceManager.h  main.cpp
src/AstVisitor/: AstCodePrinter.h  AstPrinter.h  AstVisitor.h  AstVisitorTemplate.h
src/codeGen/: BinOperationTypes.h  CodeEmitter.h  CodeGenerator.h  exceptions.h
src/decorator/: AstDecorator.h  BinaryOpSupportedTypes.h  NamesStack.h
src/ir/: IRElement.h  IRFunction.h  IRGlobal.h  IRInstructions.cpp  IRInstructions.h  IRModule.h  IRTypes.h  IRValueVar.h
src/ir/builder/: IRBuilder.h  exceptions.h
src/ir/passes/: IRRemoveBBRedundantTermPass.hpp
src/ir/passes/pass/: IRBasicBlockPass.hpp  IRFunctionAndGlobalsPass.hpp
src/ir/printer/: IRPrinter.h  ValueNamesScope.h
src/ir/visitor/: IRVisitor.h
src/lexer/: Lexer.h
src/parser/: AST.h  AST_addFunc.h  AstReplacable.h  Parser.h  SetAstNodeParentAndSelfPass.h  Types.h  exceptions.h
src/parser/AstIterator/: AstNodeChildIterator.h
src/util/: util.h  version.h.in
std/c/: CMakeLists.txt  glue.cpp
test/: assign.ma  classes.malin  expression.ma  loop.malin  loopSimple.malin  not.ma  plotter.malin  simpleCalc.ma  string.malin  t.malin
test/cpp/: AstNodeChildrenIteratorTest.cpp
